# TIRD

./: .replit  CMakeLists.txt  README.md  compile_commands.json  replit.nix
include/: interpreter.h  todo.h
src/: interpreter.c  main.c
